# CLib

./: CMakeLists.txt  LICENSE.txt  MakeTest  Makefile  README.md  looptests.sh  runtests.sh  test.sh
buildtest/: test
src/: array.c  array.h  datatypes.c  datatypes.h  json.c  json.h  numbers.c  numbers.h  string.c  string.h  test.c  types.h
test/: test.c  test.h  testBuffer.c  testBuffer.h  testBuilder.c  testBuilder.h  testErrors.c  testErrors.h  testExamples.c  testExamples.h  testJson.c  testJson.h  testNumbers.c  testNumbers.h  testSorting.c  testSorting.h  testStack.c  testStack.h  testString.c  testString.h  testStringBuilder.c  testStringBuilder.h  testUTF.c  testUTF.h
test/jsonTests/pass/: pass3.json
